# covid19-vicosa

./: .gitignore  main.ipynb  modelo_de_relatorio.pug  pyproject.toml  requirements.txt
