[tool.poetry]
name = "corona_vicosa_plot"
version = "0.1.0"
description = ""
authors = ["Igor Cardoso <igorgcardoso7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ipython = "^7.16.1"
pandas = "^1.0.5"
matplotlib = "^3.2.2"
seaborn = "^0.10.1"
psycopg2-binary = "^2.8.5"
sqlalchemy = "^1.3.18"
statsmodels = "^0.11.1"
plotly = "^4.8.2"
scikit-learn = "^0.23.1"
pickle5 = "^0.0.11"
sweetviz = "^1.0b3"
fbprophet = "^0.6"
kaleido = "^0.0.3"
psutil = "^5.7.2"
requests = "^2.24.0"
orca = "^1.5.3"
beautifulsoup4 = "^4.9.1"
pdf_reports = "^0.3.2"
selenium = "^3.141.0"
inflect = "^4.1.0"
pandas-profiling = "^2.9.0"
apyori = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
